@@ -5,10 +5,12 @@ NEW FUNCTIONS:
 MINOR:
   * soundgen(): new argument "amType" for sinusoidal or logistic amplitude modulation
   * soundgen(): "addSilence" can be of length 2 to add different amounts of silence before/after the synthesized sound
-  * pitch_app(): the "voice" button forces selection to be treated as voiced (before its function was merely to undo "unvoice")
+  * pitch_app(): the "voice" button forces selection to be treated as voiced if any candidates are available (before its function was merely to undo "unvoice")
   * pitch_app(): faster updates when adding/removing anchors (path updated only for current syllable) and when setting a new prior (analyze() is not re-run)
+  * pitch_app(): a single manual pitch anchor is still interpreted as a new syllable
   * analyze(), pitch_app(): interpolation uses loess instead of medians
   * pitch_app(), formant_app(): either "step" or "overlap" can be used to control windowing
+  * analyze(), analyzeFolder(): silence threshold is adjusted to max amplitude of input, so very quiet audio can still be treated as voiced
 
 BUGS FIXED:
   * formant_app(): doesn't crash when appending annotations
